--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cors-anywhere": "^0.4.4",
     "csv-parser": "^3.0.0",
     "express": "^4.18.2",
     "moment": "^2.29.4",
